making it beautifull otherwise almost done

--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>My Photography Portfolio</title>
+  <link rel="shortcut icon" href="camera-icon.webp" type="image/x-icon">
   
   <!-- Bootstrap CSS (v4) -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +39,7 @@
   <!-- About Section -->
   <section id="about" class="section container text-center">
     <h2>About Me</h2>
-    <p>Hi, I'm [Your Name], a photographer dedicated to capturing life's beautiful moments. I specialize in landscapes, portraits, and street photography. My work reflects a deep passion for storytelling through images.</p>
+    <p>Hi, I'm Fawad Saqlain, a photographer dedicated to capturing life's beautiful moments. I specialize in landscapes, portraits, and street photography. My work reflects a deep passion for storytelling through images.</p>
   </section>
 
   <!-- Gallery Section -->
@@ -103,7 +104,7 @@
     <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo1.jpg" alt="Sunset at the beach" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -117,7 +118,7 @@
     <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modalLabel2" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo2.jpg" alt="Mountain landscape" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -131,7 +132,7 @@
     <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="modalLabel3" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo3.jpg" alt="City skyline at night" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -145,7 +146,7 @@
     <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="modalLabel4" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo4.jpg" alt="Serene lake view" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -159,7 +160,7 @@
     <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="modalLabel5" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo5.jpg" alt="Forest trail in autumn" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -173,7 +174,7 @@
     <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="modalLabel6" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo6.jpg" alt="Modern architecture" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -187,7 +188,7 @@
     <div class="modal fade" id="modal7" tabindex="-1" role="dialog" aria-labelledby="modalLabel7" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo7.jpg" alt="Ocean waves" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -201,7 +202,7 @@
     <div class="modal fade" id="modal8" tabindex="-1" role="dialog" aria-labelledby="modalLabel8" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo8.jpg" alt="Desert sunset" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -215,7 +216,7 @@
     <div class="modal fade" id="modal9" tabindex="-1" role="dialog" aria-labelledby="modalLabel9" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo9.jpg" alt="Snowy mountains" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -229,7 +230,7 @@
     <div class="modal fade" id="modal10" tabindex="-1" role="dialog" aria-labelledby="modalLabel10" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo10.jpg" alt="Green forest" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -243,7 +244,7 @@
     <div class="modal fade" id="modal11" tabindex="-1" role="dialog" aria-labelledby="modalLabel11" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo11.jpg" alt="City street art" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -257,7 +258,7 @@
     <div class="modal fade" id="modal12" tabindex="-1" role="dialog" aria-labelledby="modalLabel12" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0">
+          <div class="modal-body p-0 watermarked">
             <img src="photos/photo12.jpg" alt="Calm river" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -303,3 +304,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+<script>
+  // Disable right-click on the entire page
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
