almost done remove the feature of watermark and non downloadablity

--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -103,7 +103,7 @@
     <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo1.jpg" alt="Sunset at the beach" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -117,7 +117,7 @@
     <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modalLabel2" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo2.jpg" alt="Mountain landscape" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -131,7 +131,7 @@
     <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="modalLabel3" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo3.jpg" alt="City skyline at night" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -145,7 +145,7 @@
     <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="modalLabel4" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo4.jpg" alt="Serene lake view" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -159,7 +159,7 @@
     <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="modalLabel5" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo5.jpg" alt="Forest trail in autumn" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -173,7 +173,7 @@
     <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="modalLabel6" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo6.jpg" alt="Modern architecture" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -187,7 +187,7 @@
     <div class="modal fade" id="modal7" tabindex="-1" role="dialog" aria-labelledby="modalLabel7" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo7.jpg" alt="Ocean waves" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -201,7 +201,7 @@
     <div class="modal fade" id="modal8" tabindex="-1" role="dialog" aria-labelledby="modalLabel8" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo8.jpg" alt="Desert sunset" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -215,7 +215,7 @@
     <div class="modal fade" id="modal9" tabindex="-1" role="dialog" aria-labelledby="modalLabel9" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo9.jpg" alt="Snowy mountains" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -229,7 +229,7 @@
     <div class="modal fade" id="modal10" tabindex="-1" role="dialog" aria-labelledby="modalLabel10" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo10.jpg" alt="Green forest" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -243,7 +243,7 @@
     <div class="modal fade" id="modal11" tabindex="-1" role="dialog" aria-labelledby="modalLabel11" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo11.jpg" alt="City street art" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -257,7 +257,7 @@
     <div class="modal fade" id="modal12" tabindex="-1" role="dialog" aria-labelledby="modalLabel12" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-body p-0 watermarked">
+          <div class="modal-body p-0">
             <img src="photos/photo12.jpg" alt="Calm river" class="img-fluid">
           </div>
           <div class="modal-footer">
@@ -301,11 +301,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   
-  <!-- Disable right-click -->
-  <script>
-    document.addEventListener('contextmenu', function(e) {
-      e.preventDefault();
-    });
-  </script>
+
 </body>
 </html>
