--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -15,8 +15,8 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">My Photography</a>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+    <a class="navbar-brand" href="#"><img src="camera-icon.webp" width="30" height="30" alt="icon-camera" style="margin-right: 15px; border-radius: 50%; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border:2px solid white">My Photography</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
