--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -83,11 +83,14 @@
     <p>&copy; 2025 My Photography. All rights reserved.</p>
   </footer>
 
-  <!-- Bootstrap JS and dependencies -->
+  <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
+  <!-- Image Protection Script -->
+  <!-- <script src="protection.js"></script> -->
+  <!-- Image Configuration -->
+  <script src="images-config.js"></script>
   <!-- Dynamic Gallery Script -->
   <script src="gallery.js"></script>
   
