--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -90,7 +90,7 @@
   <!-- Image Protection Script -->
   <!-- <script src="protection.js"></script> -->
   <!-- Image Configuration -->
-  <script src="images-config.js"></script>
+  <script src="images-config.js?v=4"></script>
   <!-- Dynamic Gallery Script -->
   <script src="gallery.js"></script>
   
