--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -88,12 +88,10 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Image Protection Script -->
-  <!-- <script src="protection.js"></script> -->
+  <script src="protection.js"></script>
   <!-- Image Configuration -->
-  <script src="images-config.js?v=4"></script>
+  <script src="images-config.js?v=5"></script>
   <!-- Dynamic Gallery Script -->
   <script src="gallery.js"></script>
-  
-
 </body>
 </html>
