--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">My Photography</a>
+    <a class="navbar-brand" href="#"><img src="camera-icon.webp" width="30" style="border-radius: 50%; border: 2px solid whitesmoke;" alt="">My Photography</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
