--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <a class="navbar-brand" href="#"><img src="camera-icon.webp" width="30" style="border-radius: 50%; border: 2px solid whitesmoke;" alt="">My Photography</a>
+    <a class="navbar-brand" href="#"><img src="camera-icon.webp" width="30" style="border-radius: 50%; border: 2px solid whitesmoke; margin-right: 10px;" alt="">My Photography</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -87,7 +87,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
   <!-- Image Protection Script -->
-  <script src="protection.js"></script>
+  <!-- <script src="protection.js"></script> -->
   <!-- Image Configuration -->
   <script src="images-config.js?v=6"></script>
   <!-- Dynamic Gallery Script -->
