make sixing better

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <a class="navbar-brand" href="#"><img src="camera-icon.webp" width="30" style="border-radius: 50%; border: 2px solid whitesmoke; margin-right: 20px;" alt="">My Photography</a>
+    <a class="navbar-brand" href="#"><img src="camera-icon.webp" width="50" style="border-radius: 50%; border: 2px solid white; margin-right: 20px;" alt="">My Photography</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon" style="width: 40px; height: 40px;"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -33,14 +33,13 @@
   <!-- Home Section -->
   <section id="home" class="section container">
     <h2>Welcome to My Photography Portfolio</h2>
-    <p>Discover my passion for capturing moments through the lens. Scroll down to explore my work and learn more about me.</p>
+    <p style="font-size: large; ">Discover my passion for capturing moments through the lens. Scroll down to explore my work and learn more about me.</p>
   </section>
 
   <!-- About Section -->
   <section id="about" class="section container text-center">
     <h2>About Me</h2>
-    <p>Hi, I'm Fawad Saqlain, a photographer dedicated to capturing life's beautiful moments. I specialize in landscapes, portraits, and street photography. My work reflects a deep passion for storytelling through images.</p>
-  </section>
+    <p style="font-size: large;">Hi, I'm Fawad Saqlain, a photographer dedicated to capturing life's beautiful moments. I specialize in landscapes, portraits, and street photography. My work reflects a deep passion for storytelling through images.</p>  </section>
 
   <!-- Gallery Section -->
   <section id="gallery" class="section container text-center">
